--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -12,10 +12,13 @@ $blending: hard-light;
 
 @mixin contentContainer($backgroundColor, $fontColor) {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  width: 850px;
+  height: 450px;
   align-items: center;
   background-color: $backgroundColor;
   padding: 50px;
+  padding-bottom: 100px;
   border-radius: 10px;
   z-index: 100;
   position: absolute;
@@ -24,41 +27,22 @@ $blending: hard-light;
   transform: translate(-50%, -50%);
   color: $fontColor;
   transition: 0.3s;
-  height: 80vh;
-  width: 60vw;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   .textBox {
-    width: 100%;
-    height: 50%;
-    line-height: 10rem;
-    font-size: 6.5rem;
+    width: 50%;
+    line-height: 4.5rem;
     font-family: $notoSans;
     font-weight: 500;
-    text-align: right;
+    text-align: left;
     white-space: nowrap;
-    margin-top: 30px;
+    margin-top: 80px;
+    margin-left: 30px;
   }
   .imageBox {
-    width: 100%;
-    height: 50%;
-    text-align: center;
-    img {
-      height: 100%;
-      width: 100%;
-      object-fit: contain;
-    }
-  }
-}
-
-@keyframes fadeInDown {
-  0% {
-    opacity: 0;
-    transform: translateY(-50px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
+    width: 50%;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -102,23 +86,20 @@ $blending: hard-light;
 
 .gradientBg {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   background: linear-gradient(40deg, $color-bg1, $color-bg2);
   top: 0;
   left: 0;
-
   svg {
     display: none;
   }
-
   .gradientsContainer {
     filter: url(#goo) blur(40px);
     width: 100%;
     height: 100%;
   }
-
   .g1 {
     position: absolute;
     background: radial-gradient(
