--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -92,11 +92,12 @@ $blending: hard-light;
   background: linear-gradient(40deg, $color-bg1, $color-bg2);
   top: 0;
   left: 0;
+  z-index: 10;
   svg {
     display: none;
   }
   .gradientsContainer {
-    filter: url(#goo) blur(40px);
+    filter: url(#goo) blur(10px);
     width: 100%;
     height: 100%;
   }
@@ -108,7 +109,7 @@ $blending: hard-light;
         rgba($color1, 0) 50%
       )
       no-repeat;
-    mix-blend-mode: $blending;
+    mix-blend-mode: hard-light;
     width: 1500px;
     height: 1500px;
     top: calc(50% - $circle-size / 2);
@@ -122,7 +123,7 @@ $blending: hard-light;
     background: radial-gradient(
         circle at center,
         rgba($color2, 0.8) 0,
-        rgba($color2, 0) 50%
+        rgba($color2, 0) 30%
       )
       no-repeat;
     mix-blend-mode: $blending;
