--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -84,6 +84,12 @@ $blending: hard-light;
   }
 }
 
+.Home {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
 .gradientBg {
   width: 100vw;
   height: 100%;
@@ -97,7 +103,7 @@ $blending: hard-light;
     display: none;
   }
   .gradientsContainer {
-    filter: url(#goo) blur(10px);
+    // filter: url(#goo) blur(1px);
     width: 100%;
     height: 100%;
   }
